@@ -24,6 +24,7 @@ extern char* lambertwreal(mpf_t r, unsigned long prec);
 extern char* logreal(mpf_t r, unsigned long prec);
 extern char* expreal(mpf_t r, unsigned long prec);
 extern char* powreal(mpf_t r, mpf_t x, unsigned long prec);
+extern char* rootreal(mpf_t r, mpf_t x, unsigned long prec);
 extern char* agmreal(mpf_t a, mpf_t b, unsigned long prec);
 extern char* eulerconst(unsigned long n);
 extern char* piconst(unsigned long n);
